--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -10513,6 +10513,10 @@
         "filter-level": "Filter logs result by level"
       },
       "unwrap-lines": "Unwrap lines",
+      "unwrapped-columns": {
+        "disable": "Disable columns for displayed fields",
+        "enable": "Enable columns for displayed fields"
+      },
       "wrap-lines": "Wrap lines"
     },
     "logs-navigation": {
@@ -10539,6 +10543,7 @@
     "name-show-controls": "Show controls",
     "name-time": "Show timestamps",
     "name-unique-labels": "Unique labels",
+    "name-unwrapped-columns": "Enable columns for displayed fields",
     "name-wrap-lines": "Wrap lines",
     "order-options": {
       "label-newest-first": "Newest first",
