--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -6642,6 +6642,9 @@
     "query-editor": {
       "query": "Query"
     },
+    "query-editor-content": {
+      "content-body-goes-here": "Content body goes here!"
+    },
     "query-variable-editor-form": {
       "description-examples": "Named capture groups can be used to separate the display text and value (<1>see examples</1> ).",
       "description-optional": "Optional, if you want to extract part of a series name or metric node segment.",
@@ -12964,9 +12967,30 @@
   },
   "query-editor": {
     "action": {
-      "inspector": "Query inspector"
+      "coming-soon": "Transformation actions coming soon",
+      "duplicate": "Duplicate query",
+      "hide": "Hide response",
+      "hide-help": "Hide data source help",
+      "inspector": "Query inspector",
+      "more-actions": "More actions",
+      "remove-query": "Remove query",
+      "remove-transformation": "Remove transformation",
+      "show": "Show response",
+      "show-help": "Show data source help"
     },
     "edit-query-name": "Edit query name",
+    "header": {
+      "expression": "Expression",
+      "transformation": "Transformation",
+      "warning-badges": {
+        "text_one": "{{count}} {{type}}",
+        "text_other": "{{count}} {{type}}"
+      }
+    },
+    "help": {
+      "close": "Close help",
+      "close-aria": "Close help panel"
+    },
     "validation": {
       "duplicate-name": "Query name already exists",
       "empty-name": "An empty query name is not allowed"
