--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -673,7 +673,6 @@
       "message": {
         "required": "Required."
       },
-      "or": "or",
       "validate-name": "Name is required"
     },
     "am-routes-expanded-form": {
@@ -864,7 +863,9 @@
       "cancel": "Cancel",
       "clear-filters": "Clear filters",
       "close": "Close",
+      "create": "Create",
       "delete": "Delete",
+      "deleting": "Deleting...",
       "edit": "Edit",
       "export": "Export",
       "export-all": "Export all",
@@ -2259,6 +2260,11 @@
       "aria-label-expand": "Expand",
       "aria-label-more": "more actions for policy",
       "aria-label-more-default": "more actions for default policy",
+      "create-modal": {
+        "creating": "Creating...",
+        "please-wait": "Please wait while we create your notification policy.",
+        "title-new-notification-policy": "New notification policy"
+      },
       "default-policy": {
         "description": "All alert instances will be handled by the default policy if no other matching policies are found.",
         "title": "Default policy",
@@ -2268,6 +2274,14 @@
         "confirm": "Yes, delete policy",
         "warning-1": "Deleting this notification policy will permanently remove it.",
         "warning-2": "Are you sure you want to delete this policy?"
+      },
+      "delete-modal": {
+        "permanently-remove": "This action will permanently remove the <1>{{routeName}}</1> notification policy.",
+        "title-delete-notification-policy": "Delete notification policy"
+      },
+      "error-modal": {
+        "failed-to-update-your-configuration": "Failed to update your configuration:",
+        "title-something-went-wrong": "Something went wrong"
       },
       "filter-description": "Filter notification policies by using a comma separated list of matchers, e.g.:<1>severity=critical, region=EMEA</1>",
       "generated-policies": "Auto-generated policies",
@@ -2284,6 +2298,7 @@
         "mute-time": "Muted when",
         "n-instances_one": "instance",
         "n-instances_other": "instance",
+        "subpolicies": "Subpolicies",
         "timingOptions": {
           "groupInterval": {
             "description": "How long to wait before sending a notification about new alerts that are added to a group of alerts for which an initial notification has already been sent.",
@@ -2305,6 +2320,12 @@
       "new-policy": "Add new policy",
       "no-matchers": "No matchers",
       "reload-policies": "Reload policies",
+      "reset-modal": {
+        "permanently-reset": "This action will permanently reset the <1>{{routeName}}</1> notification policy to an empty state.",
+        "reset": "Reset",
+        "resetting": "Resetting...",
+        "title-reset-notification-policy": "Reset notification policy"
+      },
       "root-policy": {
         "description": "All alert instances associated with this Route will be handled by this default policy if no other matching policies are found.",
         "title": "Default policy for '{{routeName}}'"
@@ -2329,45 +2350,24 @@
     "policies-list": {
       "create": {
         "aria-label": "add policy",
-        "text": "Create policy"
+        "text": "New notification policy"
       },
       "delete-reasons": {
-        "no-permissions": "You do not have the required permission to delete this routing tree",
-        "provisioned": "Routing tree is provisioned and cannot be deleted via the UI"
+        "no-permissions": "You do not have the required permission to delete this notification policy",
+        "provisioned": "Notification policy is provisioned and cannot be deleted via the UI"
       },
-      "delete-text": "Routing tree cannot be deleted for the following reasons:",
+      "delete-text": "Notification policy cannot be deleted for the following reasons:",
       "empty-state": {
         "message": "No policies found"
       },
       "fetch": {
         "error": "Failed to fetch policies"
       },
-      "policy-header": {
-        "delete": {
-          "aria-label": "delete",
-          "delete-label": "Delete",
-          "reset-label": "Reset"
-        },
-        "edit": {
-          "text": "Edit"
-        },
-        "export": {
-          "aria-label": "export",
-          "label": "Export"
-        },
-        "more-actions": {
-          "aria-label": "More actions for routing tree \"{{name}}\""
-        },
-        "view": {
-          "provisioned-tooltip": "Provisioned routing trees cannot be edited in the UI",
-          "text": "View"
-        }
-      },
       "reset-reasons": {
-        "no-permissions": "You do not have the required permission to reset this routing tree",
-        "provisioned": "Routing tree is provisioned and cannot be reset via the UI"
+        "no-permissions": "You do not have the required permission to reset this notification policy",
+        "provisioned": "Notification policy is provisioned and cannot be reset via the UI"
       },
-      "reset-text": "Routing tree cannot be reset for the following reasons:",
+      "reset-text": "Notification policy cannot be reset for the following reasons:",
       "text-loading": "Loading...."
     },
     "policies-tree-wrapper": {
@@ -2378,6 +2378,9 @@
       "label-new-child-policy": "New child policy",
       "label-new-sibling-above": "New sibling above",
       "label-new-sibling-below": "New sibling below"
+    },
+    "policy-page": {
+      "text-subtitle": "Determine how alerts are routed to contact points for alert rules configured to use this notification policy."
     },
     "preview-rule": {
       "body-preview-is-not-available": "Cannot display the query preview. Some of the data sources used in the queries are not available.",
@@ -2561,8 +2564,11 @@
       "aria-label-clear": "clear",
       "aria-label-search-routing-trees": "search routing trees",
       "clear": "Clear",
-      "label-search-by-name-or-receiver": "Search by name or receiver",
+      "label-search-by-name-or-receiver": "Search by policy name or contact point",
       "placeholder-search": "Search"
+    },
+    "routing-tree-header": {
+      "reset": "Reset"
     },
     "rule-actions-buttons": {
       "title-edit": "Edit",
@@ -3239,6 +3245,9 @@
     "timestamp": {
       "time-ago": "({{time}} ago)"
     },
+    "title": {
+      "aria-label-return-to": "Return to previous view"
+    },
     "titles": {
       "group-view": {
         "subtitle": "Manage alert rules, recording rules and evaluation interval"
@@ -3335,12 +3344,6 @@
       "label-edit": "Edit",
       "label-export": "Export"
     },
-    "use-create-routing-tree-modal": {
-      "modal-element": {
-        "add-routing-tree": "Add routing tree",
-        "title-create-routing-tree": "Create routing tree"
-      }
-    },
     "use-delete-contact-point-modal": {
       "delete-confirm": "Yes, delete contact point",
       "deleting": "Deleting...",
@@ -3358,15 +3361,6 @@
     "use-delete-policy-modal": {
       "modal-element": {
         "title-delete-notification-policy": "Delete notification policy"
-      }
-    },
-    "use-delete-routing-tree-modal": {
-      "modal-element": {
-        "delete-routing": "Are you sure you want to delete this routing tree?",
-        "delete-yes": "Yes, delete routing tree",
-        "deleting": "Deleting...",
-        "deleting-routing-permanently-remove": "Deleting this routing tree will permanently remove it.",
-        "title-delete-routing-tree": "Delete routing tree"
       }
     },
     "use-edit-configuration-drawer": {
