--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -1672,9 +1672,8 @@
         "renamed-receivers_one": "Receivers renamed: {{count}}",
         "renamed-receivers_other": "Receivers renamed: {{count}}",
         "routing": "Notification routing",
-        "routing-default": "Default Grafana policy",
-        "routing-imported": "Imported policy ({{label}}={{value}})",
-        "routing-manual": "Manual label ({{label}}={{value}})",
+        "routing-none": "No policy tree selected",
+        "routing-tree": "Policy tree: {{name}}",
         "rules-skipped": "Alert rules will not be imported.",
         "rules-title": "Alert Rules",
         "skipped": "Skipped",
@@ -1688,6 +1687,9 @@
         "will-import-rules": "Will import rules",
         "will-import-rules-count_one": "Will import {{count}} rules",
         "will-import-rules-count_other": "Will import {{count}} rules"
+      },
+      "routing-tree": {
+        "default-policy": "Default Policy"
       },
       "source": {
         "datasource": "Existing data source-managed rules",
@@ -1738,28 +1740,19 @@
         "group": "Group",
         "group-desc": "Filter by group (optional)",
         "heading": "Import Alert Rules",
-        "manual-label-name": "Label name",
-        "manual-label-name-placeholder": "team",
-        "manual-label-value": "Label value",
-        "manual-label-value-placeholder": "backend",
         "namespace": "Namespace",
         "namespace-desc": "Filter by namespace (optional)",
         "no-permission-desc": "You do not have permission to import alert rules. You need both <strong>alerting.rules:create</strong> and <strong>alerting.provisioning:write</strong> permissions. You can skip this step.",
         "no-permission-title": "Insufficient permissions",
         "pause-alerting": "Pause imported alert rules",
         "pause-recording": "Pause imported recording rules",
-        "policy": {
-          "default": "Use Grafana default policy",
-          "default-desc": "Alerts will be routed using the default Grafana notification policy",
-          "imported": "Use imported policy",
-          "imported-desc": "Use the policy tree imported in Step 1. Label {{label}}={{value}} will be added to all rules.",
-          "manual": "Enter label manually",
-          "manual-desc": "Specify a custom label to add to all imported rules"
-        },
         "policy-desc": "Choose how imported alerts should be routed to contact points.",
         "policy-title": "Notification Routing",
+        "policy-tree": "Policy tree",
+        "policy-tree-desc": "Select a notification policy tree to route alerts",
         "select-group": "All groups",
         "select-namespace": "All namespaces",
+        "select-policy": "Select a policy tree",
         "settings-title": "Additional Settings",
         "skip": "Skip this step",
         "skipped-step1": "Step 1 was skipped",
