UI: Add visibility toggle to SecretTextArea
Add a show/hide toggle button to SecretTextArea so content is masked by default with CSS -webkit-text-security: disc. Users can click the eye icon to reveal or hide content, matching the behavior of SecretInput with password fields.

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -9518,6 +9518,10 @@
     "secret-form-field": {
       "reset": "Reset"
     },
+    "secret-text-area": {
+      "hide-content": "Hide secret content",
+      "show-content": "Show secret content"
+    },
     "segment-async": {
       "error": "Failed to load options",
       "loading": "Loading options...",
