LogListControls: disable columns icon

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -10515,6 +10515,7 @@
       "unwrap-lines": "Unwrap lines",
       "unwrapped-columns": {
         "disable": "Disable columns",
+        "disabled": "Columns are not suported with wrapped logs",
         "enable": "Enable columns"
       },
       "wrap-lines": "Wrap lines"
