--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -2377,12 +2377,17 @@
     },
     "policy-tree-selector": {
       "aria-label": "Select notification policy",
+      "change": "Change",
+      "change-aria": "Change notification policy",
       "custom-policy-desc": "Route alerts through the {{name}} policy tree",
+      "default-badge": "Default policy",
+      "default-info": "Alert instances are routed using the default notification policy tree.",
       "default-policy": "Default policy",
-      "default-policy-desc": "Alert instances will be routed using the default Grafana notification policy",
+      "default-policy-desc": "Routes alerts using the default notification policy tree",
       "description": "Select which notification policy tree should handle routing for this alert rule.",
       "placeholder": "Select a policy...",
-      "title": "Notification policy",
+      "reset": "Reset to default",
+      "reset-aria": "Reset to default policy",
       "view-policies": "View policies",
       "view-policies-aria": "View notification policies"
     },
